This commit is Tagged as v1.0. This package(TreeArchaeSource.zip) was sent to BHB on 08/11/09 as a delivery of Tree Pruner - Archae
-Tree Pruner License and Documentation added

	modified:   README
	new file:   TreeArchaeSource/Archaeopteryx/TreePrunerINSTALL/Example_newick_file.txt
	new file:   TreeArchaeSource/Archaeopteryx/TreePrunerINSTALL/Example_saved_acc_file.json
	new file:   TreeArchaeSource/Archaeopteryx/TreePrunerINSTALL/TreePruner.doc
	new file:   TreeArchaeSource/Archaeopteryx/TreePrunerINSTALL/TreePruner.pdf
	new file:   TreeArchaeSource/Archaeopteryx/TreePrunerINSTALL/_tp_atv_configuration_file.txt
	new file:   TreeArchaeSource/Archaeopteryx/TreePrunerINSTALL/exampleApplet.html
	new file:   TreeArchaeSource/Archaeopteryx/TreePrunerINSTALL/lgpl-3.0.txt
	new file:   TreeArchaeSource/Archaeopteryx/java/appJars/TreePrunerArchae.jar
	new file:   TreeArchaeSource/Archaeopteryx/java/appJars/TreePrunerArchaeUnsigned.jar
	modified:   TreeArchaeSource/Archaeopteryx/java/src/org/forester/archaeopteryx/ArchaeopteryxA.java
	modified:   TreeArchaeSource/Archaeopteryx/java/src/org/forester/archaeopteryx/Configuration.java
	modified:   TreeArchaeSource/Archaeopteryx/java/src/org/forester/archaeopteryx/ControlPanel.java
	modified:   TreeArchaeSource/Archaeopteryx/java/src/org/forester/archaeopteryx/MainFrame.java
	modified:   TreeArchaeSource/Archaeopteryx/java/src/org/forester/archaeopteryx/MainFrameApplet.java
	modified:   TreeArchaeSource/Archaeopteryx/java/src/org/forester/archaeopteryx/MainPanel.java
	modified:   TreeArchaeSource/Archaeopteryx/java/src/org/forester/archaeopteryx/Options.java
	modified:   TreeArchaeSource/Archaeopteryx/java/src/org/forester/archaeopteryx/TreePanel.java
	modified:   TreeArchaeSource/Archaeopteryx/java/src/org/forester/archaeopteryx/Util.java
	modified:   TreeArchaeSource/Archaeopteryx/java/src/org/forester/phylogeny/PhylogenyNode.java

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Instructions to find a detailed README for Tree Pruner - Archae
 
 1. Open TreeArchaeSource folder and follow this path: TreeArchaeSource/Archaeopteryx/TreePrunerINSTALL
-2. In this folder you will find README.pdf (you would require a Portable Document Format reader to read this file) or README.doc (you will need a word processor to read this file) in which you can find File descriptions and usage details for this product.
+2. In this folder you will find TreePruner.pdf (you would require a Portable Document Format reader to read this file) or TreePruner.doc (you will need a word processor to read this file) in which you can find File descriptions and usage details for this product.
 
 
