This commit is Tagged as v2.0. This package(TreeArchaeSource.zip) was sent to BHB on 09/04/09 as a delivery of Tree Decorator - Archae
    - Tree Pruner License and Documentation modified
    - Tree Decorator License and Documentation added

	modified:   README
	new file:   TreeArchaeSource/Archaeopteryx/INSTALL/.DS_Store
	new file:   TreeArchaeSource/Archaeopteryx/INSTALL/ApplicationJars/.DS_Store
	renamed:    TreeArchaeSource/Archaeopteryx/java/appJars/TreePrunerArchae.jar -> TreeArchaeSource/Archaeopteryx/INSTALL/ApplicationJars/TreeArchaeUnsigned.jar
	new file:   TreeArchaeSource/Archaeopteryx/INSTALL/ConfigurationFiles/.DS_Store
	copied:     TreeArchaeSource/Archaeopteryx/TreePrunerINSTALL/_tp_atv_configuration_file.txt -> TreeArchaeSource/Archaeopteryx/INSTALL/ConfigurationFiles/Archaeopteryx /_atv_configuration_file.txt
	copied:     TreeArchaeSource/Archaeopteryx/TreePrunerINSTALL/_tp_atv_configuration_file.txt -> TreeArchaeSource/Archaeopteryx/INSTALL/ConfigurationFiles/TreeDecorator/_td_atv_configuration_file.txt
	renamed:    TreeArchaeSource/Archaeopteryx/TreePrunerINSTALL/_tp_atv_configuration_file.txt -> TreeArchaeSource/Archaeopteryx/INSTALL/ConfigurationFiles/TreePruner/_tp_atv_configuration_file.txt
	new file:   TreeArchaeSource/Archaeopteryx/INSTALL/Documentation/.DS_Store
	new file:   TreeArchaeSource/Archaeopteryx/INSTALL/Documentation/TreeDecorator/TreeDecorator.doc
	new file:   TreeArchaeSource/Archaeopteryx/INSTALL/Documentation/TreeDecorator/TreeDecorator.pdf
	new file:   TreeArchaeSource/Archaeopteryx/INSTALL/Documentation/TreePruner/TreePruner.doc
	new file:   TreeArchaeSource/Archaeopteryx/INSTALL/Documentation/TreePruner/TreePruner.pdf
	new file:   TreeArchaeSource/Archaeopteryx/INSTALL/ExampleFiles/.DS_Store
	new file:   TreeArchaeSource/Archaeopteryx/INSTALL/ExampleFiles/TreeDecoratorAllAppTypes/Example_newick_file.txt
	new file:   TreeArchaeSource/Archaeopteryx/INSTALL/ExampleFiles/TreeDecoratorAllAppTypes/exampleSequenceDetails.json
	ne

--- a/README
+++ b/README
@@ -1,6 +1,17 @@
 Instructions to find a detailed README for Tree Pruner - Archae
 
-1. Open TreeArchaeSource folder and follow this path: TreeArchaeSource/Archaeopteryx/TreePrunerINSTALL
-2. In this folder you will find TreePruner.pdf (you would require a Portable Document Format reader to read this file) or TreePruner.doc (you will need a word processor to read this file) in which you can find File descriptions and usage details for this product.
+Note All documentation in this package are provided in doc and pdf formats. You would require a Portable Document Format reader to read pdf files OR you will need a word processor to read doc files.
 
 
+1. Open TreeArchaeSource folder and follow this path: TreeArchaeSource/Archaeopteryx/INSTALL
+2. In this folder you will find
+   a.  A folder called FilesAndApplicationTypeDocumentation/. The files in this folder will help ypu to decide the appropriate application type (app_type) for your Tree Pruner. Once you have decided on the app_type, the next section in those files will help you to find the example files and related documentation for the particular app_type.
+   b. A folder with the path: Documentation/TreePruner/. The files in this folder will give you the applet interface and communication technical spec for the particular app_type.
+
+
+Instructions to find a detailed README for Tree Decorator - Archae
+
+1. Open TreeArchaeSource folder and follow this path: TreeArchaeSource/Archaeopteryx/INSTALL
+2. In this folder you will find
+   a.  A folder called FilesAndApplicationTypeDocumentation/. The files in this folder will help ypu to decide the appropriate application type (app_type) for your Tree Decorator. Once you have decided on the app_type, the next section in those files will help you to find the example files and related documentation for the particular app_type.
+   b. A	 folder with the path: Documentation/TreeDecorator/. The files in this folder will give you the applet interface and communication technical spec for the particular app_type.
